--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
             <!--nad nagłówkiem jeszcze pracuje-->
             <table class="h1">
                 <tr>
-                    <td>O mnie</td>
-                    <td>Zainteresowania</td>
+                    <td><a href="#w1">O mnie</a></td>
+                    <td><a href="#d2">Zainteresowania</a></td>
+                    <a href="#d3"><td>Projekty</td></a>
                 </tr>
             </table>
         </header>
@@ -20,7 +21,7 @@
             Z faktu siedzenia przy komputerze wielu godzin, zawsze staram się znaleźć czas na siłownię dla zdrowia fizycznego oraz psychicznego.</p>
         </div>
         
-        <div class="d2">
+        <div class="d2" id="d2">
             <p>Zainteresowania:</p>
             <ul>
                 <li>Koszykówka</li>
@@ -31,6 +32,16 @@
             </ul>
         </div>
         <div id="diamond-shield">
+        </div>
+        <div class="d3" id="d3">
+            <p>Projekty:</p>
+            <ul>
+                <li>Slav bros(projekt czasowo anulowany)</li>
+                <li>*Zbudowanie Optimusa Prime</li>
+                <li>*Zbudowanie rakiety na Marsa</li>
+                <li>*Polecenie na Marsa</li>
+            </ul>
+            <p>*Nie do końca prawda</p>
         </div>
     </body>
 </HTML>
