--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
                 <tr>
                     <td><a href="#w1">O mnie</a></td>
                     <td><a href="#d2">Zainteresowania</a></td>
-                    <a href="#d3"><td>Projekty</td></a>
+                    <td><a href="#d3">Projekty</a></td>
+                    <td><a href="#d4">Kontakt</a></td>
+                    <td><a href="blog.html">Blog</a></td>
                 </tr>
             </table>
         </header>
-        <h1 id="w1">Wizytówka/Blog</h1>
+        <h1 id="w1">Wizytówka</h1>
         <div class="d1">
             <p>Nazywam się Jakub Sokołowski, moje główne zajęcia w trakcie dnia to siedzenie w szkole.
             Ocenki zawsze były przyzwoite więc nigdy wybitnie nie musiałem poświęcać swojego wolnego czasu na nadrabianie zaległości.
@@ -42,6 +44,13 @@
                 <li>*Polecenie na Marsa</li>
             </ul>
             <p>*Nie do końca prawda</p>
+        </div>
+        <div class="d3" id="d4">
+            <p>Kontakt</p>
+            <ul>
+                <li>E-mail: xyz@gmail.com</li>
+                <li>numer: 666666666</li>
+            </ul>
         </div>
     </body>
 </HTML>
