--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="Stylesheet" type="text/css" href="style.css">
+        <title>Blog</title>
     </head>
     <body>
         <header>
