--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
     <head>
         <link rel="Stylesheet" type="text/css" href="style.css">
+        <title>Wizytówka</title>
     </head>
     <body>
         <header>
